--- a/index.htm
+++ b/index.htm
@@ -4,19 +4,7 @@
   <head>
     <meta charset=utf-8>
     <title>o rails</title>
-
-    <style>
-      body {
-        margin: 0;
-        background: pink;
-      }
-
-      canvas {
-        width: 100%;
-        height: 100%;
-        image-rendering: pixelated;
-      }
-    </style>
+    <link href=index.css rel=stylesheet>
   </head>
 
   <body>
